# copilot-integration-example

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: run_tests.yml
alembic/: env.py
alembic/versions/: 13eb6d4206b1_add_client_network_and_client_network_.py
copilot_integration_example/: api.py  crud.py  database.py  models.py  schemas.py
copilot_integration_example/routers/: clients.py  networks.py
tests/: conftest.py  test_api.py  test_crud.py
