[project]
name = "copilot-integration-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "black>=25.1.0",
    "fastapi[standard]>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pytest-cov>=6.1.1",
    "pytest>=8.4.0",
    "uvicorn>=0.34.3",
    "ruff>=0.11.13",
    "isort>=6.0.1",
]
